--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,5 +1,5 @@
 <ng-container>
     <pm-table *ngIf="data && data.length > 0" [data]="temp" [columnHeaders]="columnHeaders" [columnNames]="columnNames"
-        [renderers]="renderers"></pm-table>
+        [mergeList]="mergeList"></pm-table>
     <ng-container #table></ng-container>
 </ng-container>
